--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        python-version: ['3.x']
+        python-version: ['3.6', '3.7', '3.8', '3.9', '3.x']
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
